--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
+	<!--<video class="video" src="./assets/video.mp4" controls></video>-->
+	<video class="video" src="./assets/video.mp4"></video>
+
+	<div class="controller">
+		<button class="play">Play/Pause</button>
+		<button class="volume-up">+</button>
+		<button class="volume-down">-</button>
+		<div class="progress-bar"></div>
+	</div>
+
 	<script src="./script.js"></script>
 </body>
 </html>
